# sp3f

./: README.md  pyproject.toml
lang_boot/: construct_deepscaler.py  construct_multilingual.py  construct_s1k.py  generate_grounding.py  grpo.py  grpo_og.py  grpo_t.py  judge_responses.py  utils.py
lang_boot/config/: grpo_trainer.yaml
lang_boot/reward_functions/: reward_fn.py  reward_fn_q3.py
scripts/: collect_pairwise.sh  eval_lang_id.sh  eval_task.sh  eval_task_math100_zh.sh  eval_task_translate.sh  eval_task_tt_01_translate_en.sh  eval_task_tt_01_translate_en_API.sh  eval_task_tt_02_inference_en.sh  eval_task_tt_03_translate_xx.sh  eval_translate.sh  eval_x.sh  reasoning_construct_en_dataset.sh  reasoning_construct_w_en_generated_traces.sh  reasoning_construct_w_generated_traces.sh  reasoning_construct_w_translated_traces.sh  reasoning_generate_en_traces.sh  reasoning_generate_xx_fewshots.sh  reasoning_generate_xx_traces.sh  reasoning_translate_queries.sh  reasoning_translate_queries_API.sh  reasoning_translate_solutions.sh  reasoning_translate_solutions_API.sh  reasoning_translate_traces.sh  train_grpo.sh  train_grpo_baseline.sh  train_lang.sh  train_sft.sh
sp3f/: README.md  construct_dataset.py  grpo.py  main_grpo.py  utils.py
sp3f/config/: eval.yaml  grpo_trainer.yaml
sp3f/reward_functions/: reward_fn.py
tasks/: README.md
tasks/task_evaluation/: belebele.py  copal_id.py  flores.py  global_mmlu.py  global_piqa.py  indo_mmlu.py  japanese_mmlu.py  mclm_mt_math100.py
tasks/task_evaluation/judge_grounding/: g_right_v_en_right.jsonl  g_right_v_g_wrong.jsonl  g_right_v_t.jsonl  g_wrong_v_t.jsonl  judge_grounding.py  judge_grounding_no_en.py  t_v_en_right.jsonl
tasks/task_evaluation/mgsm/: mgsm.py
tasks/task_modifiers/: measure_prompt.py  reasoning_en_prompt.py  reasoning_prompt.py  translate_prompt.py
tasks/task_training/: deepscaler.py  finqa.py  gsm_plus.py  mt_bench101.py  s1k.py
