[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sp3f"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sp3f"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "Self-Play with Privileged Pairwise Feedback"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
license = { "text" = "MIT" }
dependencies = [
    "vllm>=0.14.0",
]


[tool.setuptools.packages.find]
include = ["sp3f/*"]

[project.scripts]
sp3f = "sp3f.__main__:main"
