[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sp3f"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sp3f"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "Self-Play with Privileged Pairwise Feedback"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
license = { "text" = "MIT" }
dependencies = [
    "lingua-language-detector",
    "math-verify[antlr4_13_2]",
    "vllm>=0.11.0",
    "verl==0.5.0",
    "yaeval-harness @ git+https://github.com/lintangsutawika/yaeval-harness.git",
    "datasets",
    "transformers",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "openai",
]

[tool.setuptools.packages.find]
include = ["sp3f/*"]

[project.scripts]
sp3f = "sp3f.__main__:main"
